# payipa

./: README.md  main.py  pyproject.toml
app/: alembic.ini  main.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 02f4c04f7cd9_update_task_table.py  087883cdbd0c_update_task_table.py  11978ed75d72_update_task_table.py  1742e844e84c_update_data_table.py  22d4a4efb5da_update_rule_table.py  239c45bc9028_update_data_table.py  2f22a303f739_update_rule_table.py  34211bac2fde_add_task_table.py  424645c6588a_migration_message.py  8166103f6660_update_task_table.py  ba25d942b9f1_update_task_table.py  c409b00ad89b_update_task_table.py  e5d5fed02b3b_migration_message.py  fb99d6c748dc_update_data_table.py  fed7f9fe527f_update_rule_table.py  ff0ff8307a7e_add_task_table.py
app/api/: deps.py  main.py
app/api/routes/: datas.py  login.py  pages.py  tasks.py  users.py  utils.py
app/core/: config.py  db.py  security.py
app/cruds/: auth.py  auth_crud.py  task_crud.py  user_crud.py
app/models/: basic_model.py  data_model.py  spider_model.py  task_model.py  user_model.py
app/static/css/: index.css  style.css
app/static/js/: common.js  components.js  index.js
app/templates/: aggregated_search.html  ai_comment.html  base.html  data.html  data_detail.html  data_query.html  index.html  knowledge_base.html  log_view.html  login.html  profile.html  register.html  task.html  users.html
